--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Break Out</title>
   </head>
   <body>
+    <br>
+    <h1 class="title ">Break Out </h1>
     <div id="score"></div>
     <div class="grid"></div>
     <script src="index.js"></script>
